# reflect

./: CMakeLists.txt  LICENSE.md  README.md
src/: json.cpp  json.hpp  reflection.cpp  reflection.hpp
test/: CMakeLists.txt
test/src/: main.cpp
test/src/json/: serialize.cpp
test/src/reflection/: methods.cpp  reflection.cpp  type_id.cpp
